<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jeanbarrossilva.stoa.ui.view.BookDetailsScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="180dp"
            android:clipToPadding="false"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="60dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/cover_view"
                    android:layout_width="wrap_content"
                    android:layout_height="360dp"
                    android:layout_gravity="center"
                    android:elevation="4dp"
                    android:adjustViewBounds="true"
                    app:riv_corner_radius="10dp"
                    tools:src="@drawable/img_view_book_placeholder_cover" />

            </FrameLayout>

            <com.jeanbarrossilva.stoa.ui.view.ColumnLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:clipToPadding="false"
                app:spacing="60dp">

                <com.jeanbarrossilva.stoa.ui.view.ColumnLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    app:spacing="5dp">

                    <TextView
                        android:id="@+id/author_name_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/android_euclid"
                        android:textAlignment="center"
                        tools:text="@string/fragment_book_details_placeholder_author" />

                    <com.jeanbarrossilva.stoa.ui.view.ColumnLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        app:spacing="2.5dp">

                        <TextView
                            android:id="@+id/title_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:fontFamily="@font/android_euclid"
                            android:textAlignment="center"
                            android:textSize="23sp"
                            android:textColor="?android:textColorPrimary"
                            tools:text="@string/view_book_placeholder_title" />

                        <TextView
                            android:id="@+id/subtitle_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:textColor="?android:textColorPrimary"
                            tools:text="@string/view_book_placeholder_subtitle" />

                    </com.jeanbarrossilva.stoa.ui.view.ColumnLayout>

                </com.jeanbarrossilva.stoa.ui.view.ColumnLayout>

                <TextView
                    android:id="@+id/description_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    tools:text="@string/fragment_book_details_placeholder_description" />

            </com.jeanbarrossilva.stoa.ui.view.ColumnLayout>

        </LinearLayout>

    </com.jeanbarrossilva.stoa.ui.view.BookDetailsScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:padding="15dp"
        android:text="@string/fragment_book_details_buy"
        android:textAllCaps="false"
        android:letterSpacing="0"
        android:textColor="?android:textColorPrimaryInverse"
        app:icon="@drawable/ic_round_shopping_basket_24"
        app:iconTint="?android:textColorPrimaryInverse"
        app:backgroundTint="?android:textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>